[gd_scene load_steps=13 format=3 uid="uid://bwdykr2rh4i0e"]

[ext_resource type="Material" uid="uid://db1fy53axbpso" path="res://shaderflou.tres" id="1"]
[ext_resource type="TileSet" uid="uid://bd6qw7g8wdruo" path="res://Tilesets/blocs_tileset.tres" id="3_3g6ky"]
[ext_resource type="Script" path="res://Scripts/Buttons.gd" id="4"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="5"]
[ext_resource type="Shape2D" path="res://PlayerCollision.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://t7ooeu178n4m" path="res://new_logo.png" id="7_xja6t"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="9"]
[ext_resource type="StyleBox" path="res://Themes/styleboxflat2_pressed.tres" id="9_yu7a7"]
[ext_resource type="StyleBox" path="res://Themes/styleboxflat2_hover.tres" id="10_er4xa"]
[ext_resource type="Script" path="res://Sc√®nes/Sprite2D.gd" id="12_husad"]
[ext_resource type="Script" path="res://Scripts/BackgroundMap.gd" id="13"]
[ext_resource type="Script" path="res://Scripts/PlayerBack.gd" id="14"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-228, -64)
script = ExtResource("5")

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("9")

[node name="Camera2D" type="Camera2D" parent="MainMenu"]
position = Vector2(639, 618)
offset = Vector2(0, -256)
enabled = false

[node name="BackgroundMap" type="TileMap" parent="MainMenu/Camera2D"]
position = Vector2(-639, -359.405)
scale = Vector2(2, 2)
tile_set = ExtResource("3_3g6ky")
format = 2
script = ExtResource("13")

[node name="BackgroundMapLights" type="TileMap" parent="MainMenu/Camera2D"]
position = Vector2(-639, -359.405)
format = 2

[node name="Player" type="CharacterBody2D" parent="MainMenu/Camera2D"]
position = Vector2(300, -559.405)
script = ExtResource("14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenu/Camera2D/Player"]
position = Vector2(0, -0.0946045)
shape = ExtResource("7")

[node name="Perso" type="AnimatedSprite2D" parent="MainMenu/Camera2D/Player"]
light_mask = 2
position = Vector2(-1.11111, -14.4444)
scale = Vector2(2.4, 2.4)
animation = &""

[node name="TShirt" type="Sprite2D" parent="MainMenu/Camera2D/Player"]
position = Vector2(3.70001, -12.05)
scale = Vector2(2.4, 2.4)

[node name="Head" type="Sprite2D" parent="MainMenu/Camera2D/Player"]
position = Vector2(3.70001, -30.05)
scale = Vector2(2.4, 2.4)

[node name="Hair" type="AnimatedSprite2D" parent="MainMenu/Camera2D/Player"]
position = Vector2(-3.33334, -23.3333)
scale = Vector2(2.4, 2.4)
animation = &""

[node name="Legs" type="Sprite2D" parent="MainMenu/Camera2D/Player"]
position = Vector2(2.5, 4.75)
scale = Vector2(2.4, 2.4)

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
visible = false
material = ExtResource("1")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 2.99963

[node name="CPUParticles2D" type="CPUParticles2D" parent="MainMenu"]
position = Vector2(640, 234)
amount = 25
emission_shape = 2
emission_sphere_radius = 128.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 50)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(0.945098, 0, 1, 1)

[node name="pm" type="Sprite2D" parent="MainMenu"]
texture_filter = 1
position = Vector2(640, 232)
scale = Vector2(8, 8)
texture = ExtResource("7_xja6t")

[node name="Background" type="Panel" parent="MainMenu/pm"]
visible = false
offset_left = -7.875
offset_top = 18.0507
offset_right = 56.125
offset_bottom = 34.0507
scale = Vector2(0.25, 0.25)
theme_override_styles/panel = ExtResource("9_yu7a7")

[node name="Foreground" type="Panel" parent="MainMenu/pm/Background"]
layout_mode = 0
offset_top = -2.0
offset_right = 64.0
offset_bottom = 14.0
theme_override_styles/panel = ExtResource("10_er4xa")

[node name="Label" type="Label" parent="MainMenu/pm/Background"]
layout_mode = 0
offset_top = -2.0
offset_right = 45.0
offset_bottom = 9.0
scale = Vector2(1.4, 1.4)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
text = "demo"

[node name="Play" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 384.0
offset_top = 467.0
offset_right = 896.0
offset_bottom = 531.0
focus_mode = 0
script = ExtResource("4")

[node name="Label" type="Label" parent="MainMenu/Play"]
texture_filter = 1
layout_mode = 0
offset_right = 128.0
offset_bottom = 16.0
scale = Vector2(4, 4)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_title_play"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Settings" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 384.0
offset_top = 544.0
offset_right = 896.0
offset_bottom = 608.0
focus_mode = 0
script = ExtResource("4")

[node name="Label" type="Label" parent="MainMenu/Settings"]
texture_filter = 1
layout_mode = 0
offset_right = 128.0
offset_bottom = 16.0
scale = Vector2(4, 4)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_title_settings"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 1144.0
offset_top = 679.0
offset_right = 1268.0
offset_bottom = 711.0
focus_mode = 0
script = ExtResource("4")

[node name="Label" type="Label" parent="MainMenu/Quit"]
self_modulate = Color(0.615686, 0, 1, 1)
texture_filter = 1
layout_mode = 0
offset_right = 62.0
offset_bottom = 16.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 7
mouse_filter = 1
text = "menu_title_quit"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VersionName" type="Label" parent="MainMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 699.405
offset_right = 320.0
offset_bottom = 710.405
scale = Vector2(1.5, 1.5)
text = "Platform Master Version"

[node name="Sprite2D" type="Sprite2D" parent="."]
script = ExtResource("12_husad")

[connection signal="pressed" from="MainMenu/Play" to="MainMenu" method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="MainMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="MainMenu" method="_on_Quit_pressed"]
